--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "daisyui": "^1.14.0",
+    "dayjs": "^1.10.6",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^2.2.9"
   }
 }
