--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.1",
-    "theme-change": "^2.0.2"
+    "theme-change": "^2.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
