--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-select": "^4.3.1",
     "react-toastify": "^8.0.2",
     "theme-change": "^2.0.2",
     "uuid": "^8.3.2"
