--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "daisyui": "^1.14.0",
     "dayjs": "^1.10.6",
+    "dexie": "^3.0.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
